:icons: font

= Gentics Mesh Changelog

== 0.10.5 (TBD)

icon:check[] Performance: Optimized binary download memory usage.

icon:check[] REST: Fixed a bug which prevented pages with more then 2000 items from being loaded.

== 0.10.4 (10.10.2017)

CAUTION: REST: The `availableLanguages` field now also contains the publish information of the languages of a node.

icon:check[] REST: Fixed a bug in the permission system. Permissions on microschemas will now correctly be updated when applying permission recursively on projects.

icon:check[] REST: ETags will now be updated if the permission on the element changes.

icon:check[] Core: Various bugs within the schema / microschema migration code have been addressed and fixed.

icon:check[] Core: The search index handling has been updated. A differential synchronization will be run to update the new search index and thus the old index data can still be used.

icon:check[] Performance: Removing permissions has been optimized.

icon:plus[] UI: A new action was added to the node action context menu. It is now possible to unpublish nodes.

icon:plus[] UI: The Mesh UI was updated.

icon:plus[] Config: It is now possible to configure the host to which the Gentics Mesh http server should bind to via the `httpServer.host` setting in the `mesh.yml` file. Default is still 0.0.0.0 (all interfaces).

icon:plus[] REST: The `/api/v1/:projectName/releases/:releaseUuid/migrateSchemas` and `/api/v1/:projectName/releases/:releaseUuid/migrateMicroschemas` endpoints have been changed from `GET` to `POST`.

icon:plus[] REST: The `/api/v1/admin/reindex` and `/api/v1/admin/createMappings` endpoints have been changed from `GET` to `POST`.

icon:plus[] CLI: It is now possible to reset the admin password using the `-resetAdminPassword` command line argument.

icon:plus[] GraphQL: The underlying graphql-java library was updated to version 5.0

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.29

== 0.10.3 (18.09.2017)
