@@ -10,6 +10,7 @@ import com.gentics.mesh.FieldUtil;
 import com.gentics.mesh.core.rest.node.NodeListResponse;
 import com.gentics.mesh.core.rest.node.NodeResponse;
 import com.gentics.mesh.core.rest.role.RolePermissionRequest;
+import com.gentics.mesh.parameter.impl.VersioningParametersImpl;
 import com.gentics.mesh.test.TestSize;
 import com.gentics.mesh.test.context.AbstractMeshTest;
 import com.gentics.mesh.test.context.MeshTestSetting;
@@ -25,7 +26,7 @@ public class NodePermissionSearchTest extends AbstractMeshTest {
 		String json = getESQuery("nodeWildcard.es");
 
 		NodeListResponse list = call(() -> client().searchNodes(PROJECT_NAME, json));
-		assertEquals("The user should be found since the requestor has permission to see it", 1, list.getData().size());
+		assertEquals("The node should be found since the requestor has permission to see it", 1, list.getData().size());
 
 		// Revoke read permission
 		RolePermissionRequest request = new RolePermissionRequest();
@@ -33,7 +34,7 @@ public class NodePermissionSearchTest extends AbstractMeshTest {
 		call(() -> client().updateRolePermissions(roleUuid(), "/projects/" + PROJECT_NAME + "/nodes/" + response.getUuid(), request));
 
 		list = call(() -> client().searchNodes(PROJECT_NAME, json));
-		assertEquals("The user should not be found since the requestor has no permission to see it", 0, list.getData().size());
+		assertEquals("The node should not be found since the requestor has no permission to see it", 0, list.getData().size());
 
 	}
 
@@ -42,18 +43,47 @@ public class NodePermissionSearchTest extends AbstractMeshTest {
 		try (Tx tx = tx()) {
 			recreateIndices();
 		}
-		NodeResponse response = createNode("slug", FieldUtil.createStringField("slugblub"));
+		createNode("slug", FieldUtil.createStringField("slugblub"));
 
 		String json = getESQuery("nodeWildcard.es");
 
 		NodeListResponse list = call(() -> client().searchNodes(PROJECT_NAME, json));
-		assertEquals("The user should be found since the requestor has permission to see it", 1, list.getData().size());
+		assertEquals("The node should be found since the requestor has permission to see it", 1, list.getData().size());
 
 		// Delete the role
 		call(() -> client().deleteRole(roleUuid()));
 
 		list = call(() -> client().searchNodes(PROJECT_NAME, json));
-		assertEquals("The user should not be found since the requestor has no permission to see it", 0, list.getData().size());
+		assertEquals("The node should not be found since the requestor has no permission to see it", 0, list.getData().size());
+
+	}
+
+	@Test
+	public void testReadPublishPerm() throws Exception {
+		try (Tx tx = tx()) {
+			recreateIndices();
+		}
+		NodeResponse response = createNode("slug", FieldUtil.createStringField("slugblub"));
+		call(() -> client().publishNode(PROJECT_NAME, response.getUuid()));
+
+		String json = getESQuery("nodeWildcard.es");
+
+		NodeListResponse list = call(() -> client().searchNodes(PROJECT_NAME, json, new VersioningParametersImpl().published()));
+		assertEquals("The node should be found since the requestor has permission to see it", 1, list.getData().size());
+
+		// Revoke read permission and only grant read published
+		RolePermissionRequest request = new RolePermissionRequest();
+		request.getPermissions().setRead(false);
+		request.getPermissions().setReadPublished(true);
+		call(() -> client().updateRolePermissions(roleUuid(), "/projects/" + PROJECT_NAME + "/nodes/" + response.getUuid(), request));
+
+		list = call(() -> client().searchNodes(PROJECT_NAME, json, new VersioningParametersImpl().published()));
+		assertEquals("The node should be found since the requestor has permission read publish", 1, list.getData().size());
+
+		request.getPermissions().setReadPublished(false);
+		call(() -> client().updateRolePermissions(roleUuid(), "/projects/" + PROJECT_NAME + "/nodes/" + response.getUuid(), request));
+		list = call(() -> client().searchNodes(PROJECT_NAME, json, new VersioningParametersImpl().published()));
+		assertEquals("The node should not be found since the requestor has no permission to see it", 0, list.getData().size());
 
 	}
 }
