@@ -1,5 +1,6 @@
 package com.gentics.mesh.search.transformer;
 
+import static com.gentics.mesh.core.data.ContainerType.PUBLISHED;
 import static com.gentics.mesh.test.TestSize.FULL;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -9,13 +10,12 @@ import java.util.HashSet;
 
 import org.junit.Test;
 
-import com.syncleus.ferma.tx.Tx;
-import com.gentics.mesh.core.data.ContainerType;
 import com.gentics.mesh.core.data.NodeGraphFieldContainer;
 import com.gentics.mesh.core.data.Release;
 import com.gentics.mesh.search.index.node.NodeContainerTransformer;
 import com.gentics.mesh.test.context.AbstractMeshTest;
 import com.gentics.mesh.test.context.MeshTestSetting;
+import com.syncleus.ferma.tx.Tx;
 
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
@@ -28,8 +28,8 @@ public class NodeContainerTransformerTest extends AbstractMeshTest {
 		NodeContainerTransformer transformer = new NodeContainerTransformer();
 		try (Tx tx = tx()) {
 			Release release = project().getLatestRelease();
-			NodeGraphFieldContainer node = content("concorde").getGraphFieldContainer(english(), release, ContainerType.PUBLISHED);
-			JsonObject document = transformer.toDocument(node, release.getUuid());
+			NodeGraphFieldContainer node = content("concorde").getGraphFieldContainer(english(), release, PUBLISHED);
+			JsonObject document = transformer.toDocument(node, release.getUuid(), PUBLISHED);
 			JsonObject families = document.getJsonObject("tagFamilies");
 
 			HashSet<String> basicNames = new HashSet<>(Arrays.asList("Plane", "Twinjet"));
